  (generally true for CMPL tasks) to allow the resource to review and decide if
  he/she needs more time to do any update on the task and also give a chance of
  setting the Task status to WIP by creating a time log.

* **New:** It is now possible to schedule only a desired set of projects by
  passing a **projects** argument to the TaskJugglerScheduler.

0.2.10.5
========

* **Update:** TaskJuggler output is now written to debug output once per line.

0.2.10.4
========

* **New:** '@' character is now allowed in Entity nice name.

0.2.10.3
========

* **New:** '@' character is now allowed in Version take names.

0.2.10.2
========

* **Fix:** Fixed a bug in
  ``stalker.models.schedulers.TaskJugglerScheduler._create_tjp_file_content()``
  caused by non-ascii task names.

* **Fix:** Removed the residual ``RootFactory`` class reference from
  documentation.

* **New:** Added to new functions called ``utc_to_local`` and ``local_to_utc``
  for UTC to Local time and vice versa conversion.

0.2.10.1
========

* **Fix:** Fixed a bug where for a WIP Task with no time logs (apparently
  something went wrong) and no dependencies using
  ``Task.update_status_with_dependent_statuses()`` will convert the status to
  RTS.

0.2.10
======

* **New:** It is now possible to track the Edit information per Shot using the
  newly introduced ``source_in``, ``source_out`` and ``record_in`` along with
  existent ``cut_in`` and ``cut_out`` attributes.

0.2.9.2
=======

* **Fix:** Fixed MySQL initialization problem in ``stalker.db.init()``.

0.2.9.1
=======

* **New:** As usual, after a new release, fixed a bug in
  ``stalker.db.create_entity_statuses()`` caused by the behavioral change of
  the ``map`` built-in function in Python 3.

0.2.9
=====

* **New:** Added a new class called ``Daily`` which will help managing
  ``Version`` outputs (Link instances including Versions itself) as a group.

* **New:** Added a new status list for ``Daily`` class which contains two